<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--  This is our one standard application action (creating a new note). -->
    <item android:id="@+id/menu_add"
          android:icon="@drawable/ic_menu_compose"
          android:title="@string/menu_add"
          android:alphabeticShortcut='a'
          app:showAsAction="always" />
    <!--  If there is currently data in the clipboard, this adds a PASTE menu item to the menu
          so that the user can paste in the data.. -->
    <item android:id="@+id/menu_paste"
          android:icon="@drawable/ic_menu_compose"
          android:title="@string/menu_paste"
          android:alphabeticShortcut='p' />
    <item android:id="@+id/back_color"
           android:title="@string/back_title">
        <menu>
            <item  android:id="@+id/yellow"
                android:title="浅黄" />
            <item android:id="@+id/violet"
                android:title="浅紫" />
            <item android:id="@+id/blue"
                android:title="浅蓝" />
        </menu>

    </item>
    <item android:title="分类">
        <menu>
            <item android:title="运动"
                android:id="@+id/sport2"></item>
            <item android:title="学习"
                android:id="@+id/study2"></item>
            <item android:title="生活"
                android:id="@+id/life2"></item>
        </menu>
    </item>
</menu>